# yinglangsms-sdk

./: README.md  api-reference.md
go/: README.md  go.mod  yinglangsms.go
java/: README.md  pom.xml
java/src/main/java/cc/yljm/sms/: YinglangSmsClient.java  YinglangSmsException.java
js/: README.md  yinglangsms.esm.js
nodejs/: README.md  index.d.ts  index.js  package.json
python/: README.md  pyproject.toml
python/yinglangsms/: __init__.py
